refactor: change some method calls